# fitnessllm-shared

./: .pre-commit-config.yaml  Makefile  README.md  cloud_utils.py  logger_utils.py  pyproject.toml  setup.py  task_utils.py
fitnessllm_shared/: cloud_utils.py  logger_utils.py  task_utils.py
fitnessllm_shared/entities/: constants.py
fitnessllm_shared/streams/: strava.py
streams/: strava.py
utils/: config_loader.py
